fix: added some css to reduce overlap

--- a/src/styles/components/_planning.scss
+++ b/src/styles/components/_planning.scss
@@ -4,7 +4,7 @@ app-planning-row {
   flex-direction: row;
   margin: 0;
   padding: 0;
-  min-height: 70px;
+  min-height: 100px;
 }
 
 app-planning-row > div {
